tests/ui/compound-index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/ui/compound-index-unsupported.rs:8:26
  |
8 |     #[cryptonamo(query = "blah", compound = "email#name")]
  |                          ^^^^^^
